fix the width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  height: max-content;
+  height: 100%;
 
 }
 h1{
