--- a/src/components/Style/NoteCard.css
+++ b/src/components/Style/NoteCard.css
@@ -11,7 +11,7 @@
 
 .card{
     box-sizing: border-box;
-    width:100vh;
+    width:50vW;
     height:31vh;
     padding: 1.3vh;
     margin: 3vh;
